<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FCO Alerts</string>
    <string name="app_title">FCO Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <string name="register_error">Sorry, cannot register at this time</string>

    
    <string name="all">ALL</string>
    <string name="settings_countries_title">Country settings</string>
    <string name="country_list">Choose countries and territories...</string>
    <string name="show_all_countries">See only selected countries</string>
    <string name="settings_title">Settings</string>
    
    <string name="preference_notifications">Notifications</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="disable_vibration">Disable vibration</string>
    <string name="disable_sound">Disable sound</string>
</resources>
